assets/custom-theme.css
/* ... */
.collection-nav--child > li > a.densifique {
  border-left: 3px solid #D8D8D8 !important;
}
.collection-nav--child > li > a.discipline {
  border-left: 3px solid #E79B89 !important;
}
.collection-nav--child > li > a.elixir-ultime {
  border-left: 3px solid #DA8600 !important;
}
.collection-nav--child > li > a.nutritive {
  border-left: 3px solid #EE4D1D !important;
}
.collection-nav--child > li > a.reflection {
  border-left: 3px solid #C9228D !important;
}
.collection-nav--child > li > a.resistance {
  border-left: 3px solid #249C9E !important;
}
.collection-nav--child > li > a.specifique,
.collection-nav--child > li > a.sp\e9 cifique {
  border-left: 3px solid #D40017 !important;
}
.collection-nav--child > li > a.specifique,
.collection-nav--child > li > a.genesis {
  border-left: 3px solid #F7EEF0 !important;
}
.collection-nav--child > li > a.specifique,
.collection-nav--child > li > a.blond-absolu {
  border-left: 3px solid #8386DD !important;
}
.collection-nav--child > li > a.chroma-absolu {
  border-left: 3px solid #D49DA4 !important;
}
.collection-nav--child > li > a.curl-manifesto {
  border-left: 3px solid #F1C5A5 !important;
}
.product-grid-item .figcaption.under {
  min-height: 140px;
  max-height: 140px;
}
.thick-underline {
  border-bottom: 2px solid #333;
}
.collection-brand-image {
  margin-bottom: 1.5em;
}
.collection-branded .brand-logo {
  margin-bottom: 2em;
  margin-top: 0.5em;
  max-width: 85%;
}
.collection-branded .page_header__subtitle {
  margin-bottom: 2em;
}
.collection-branded .brand-featured-text {
  margin-bottom: 2.5em;
}
.collection-branded .brand-featured-text p {
  font-size: 14px !important;
}
.collection-branded .best-sellers .section-header,
.collection-branded .new-arrivals .section-header {
  margin-bottom: 0;
}
.collection-branded .section-header__title,
.collection-branded .section-title,
.collection-branded .featured-collection__title,
.collection-branded .discover-collection__title {
  font-family:
    "Playfair Display",
    "Lato",
    "Helvetica",
    sans-serif;
}
.collection-branded h1,
.collection-branded h2,
.collection-branded h3,
.collection-branded h4,
.collection-branded h5,
.collection-branded h6,
.collection-branded-subcollection h1,
.collection-branded-subcollection h2,
.collection-branded-subcollection h3,
.collection-branded-subcollection h4,
.collection-branded-subcollection h5,
.collection-branded-subcollection h6 {
  font-family:
    "Playfair Display",
    "Lato",
    "Helvetica",
    sans-serif;
}
.collection-branded .grid.custom-section {
  padding: 1em 0;
}
.collection-branded .grid.custom-section.full-width {
  padding-top: 0;
}
.collection-branded .custom-section.full-width .section-header {
  margin-bottom: 2rem;
}
.collection-branded .page-margin {
  padding-top: 0;
}
.collection-branded .featured-collection a,
.collection-branded .discover-collection a {
  text-decoration: none;
}
.collection-branded .featured-collection__title,
.collection-branded .discover-collection__title {
  margin-top: 15px;
  margin-bottom: 0;
  font-size: 1.15em;
}
.collection-branded .featured-collection__subtitle,
.collection-branded .discover-collection__subtitle {
  font-size: 14px;
  margin: 0 0 15px;
}
.collection-branded .collection-sidebar hr {
  display: block;
  border-top: solid rgba(156, 154, 154, 0.2);
}
.grid.normalised-product-name-height .name_wrapper {
  min-height: 57px;
}
.collection-branded-subcollection .product-grid-item .name_wrapper,
.collection-branded .product-grid-item .name_wrapper {
  letter-spacing: 0;
  font-size: 14px;
}
.collection-branded .product-grid-item.grid__item {
  margin-bottom: 1em;
}
.collection-branded .featured-collection.product-grid-item.grid__item,
.collection-branded .discover-collection.product-grid-item.grid__item {
  margin-bottom: 0;
}
.collection-branded .featured-collection.product-grid-item.grid__item:last-child,
.collection-branded .discover-collection.product-grid-item.grid__item:last-child {
  margin-bottom: 0;
}
.mobile-only {
  display: none;
}
.collection-branded .collection-view-all {
  display: block;
  margin-top: 1.5em;
  margin-bottom: 1em;
  font-size: 14px;
}
@media screen and (max-width: 768px) {
  .collection-branded .brand-logo {
    margin: 0.5em auto 1em;
    width: 60%;
    max-width: 180px;
  }
  .collection-branded .product-grid-item.grid__item {
    margin-bottom: 0.5em;
  }
  .collection-branded .grid.custom-section .grid__item {
    margin-bottom: 1em;
  }
  .collection-branded .grid.custom-section .grid__item:last-child {
    margin-bottom: 0;
  }
  .mobile-only {
    display: block;
  }
  .desktop-only {
    display: none;
  }
  .collection.collection-branded {
    padding-top: 30px;
  }
}
@media screen and (max-width: 480px) {
  .collection-branded .custom-section .section-title {
    font-size: 1.375em;
    text-align: center;
  }
  .collection-branded hr {
    margin: 1.5em 0;
  }
}
@media screen and (min-width: 481px) and (max-width: 768px) {
  .collection-branded .custom-section .section-title {
    font-size: 1.75em;
    text-align: center;
  }
}
.product-grid-item {
  text-align: center;
}
.grid__image {
  display: block;
  position: relative;
}
.lt-ie9 .grid__image img,
.ie9 .grid__image img {
  top: 0;
}
html:not(.lt-ie9) .image_autoheight_enable {
}
html:not(.lt-ie9) .image_autoheight_enable .grid__image img {
  max-height: 100%;
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  backface-visibility: hidden;
}
@media screen and (max-width: 480px) {
  html:not(.lt-ie9) .image_autoheight_enable .small--one-whole > .grid__image {
    height: auto !important;
  }
  html:not(.lt-ie9) .image_autoheight_enable .small--one-whole > .grid__image img {
    max-height: none;
    top: auto;
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}
/* ... */

